fixed filter-menu checkbox section overflow

--- a/src/app/pages/explore/filter/filter.component.scss
+++ b/src/app/pages/explore/filter/filter.component.scss
@@ -20,6 +20,10 @@
   scrollbar-width: none;
 }
 
+.uncheckedContainer{
+  max-height: 100%;
+}
+
 .checkbox-container::-webkit-scrollbar {
   display: none;
 }
